--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.6)
+cmake_minimum_required(VERSION 3.20)
 
 project(Tilengine)
 
@@ -11,6 +11,7 @@ file(GLOB SOURCES
 # main library
 list(REMOVE_ITEM SOURCES "src/Test.c")
 add_library(${PROJECT_NAME} ${SOURCES})
+add_library(tilengine::Tilengine ALIAS ${PROJECT_NAME})
 
 if (UNIX AND NOT APPLE)
 	set(CMAKE_C_FLAGS "-m64 -msse2")
@@ -25,7 +26,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE "png")
 find_package(SDL2 REQUIRED)
 target_link_libraries(${PROJECT_NAME} PRIVATE ${SDL2_LIBRARIES})
 
-target_include_directories(${PROJECT_NAME} PRIVATE include)
+target_include_directories(${PROJECT_NAME} PUBLIC include)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -O2 -fpic -DLIB_EXPORTS")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-result -Wno-format-truncation")
